@@ -5,7 +5,7 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.nimbusds.oauth2.sdk.util.CollectionUtils;
 import fr.insee.survey.datacollectionmanagement.configuration.auth.user.AuthorityPrivileges;
-import fr.insee.survey.datacollectionmanagement.constants.Constants;
+import fr.insee.survey.datacollectionmanagement.constants.UrlConstants;
 import fr.insee.survey.datacollectionmanagement.contact.domain.Contact;
 import fr.insee.survey.datacollectionmanagement.contact.dto.ContactDto;
 import fr.insee.survey.datacollectionmanagement.contact.service.AddressService;
@@ -84,14 +84,14 @@ public class WebclientController {
 
     private final ViewService viewService;
 
-    private final QuestioningAccreditationService questioningAccreditationService;
-
     private final QuestioningEventService questioningEventService;
+
+    private final QuestioningAccreditationService questioningAccreditationService;
 
     private final ModelMapper modelMapper;
 
     @Operation(summary = "Create or update questioning for webclients - Returns the questioning and all its accreditations")
-    @PutMapping(value = Constants.API_WEBCLIENT_QUESTIONINGS, produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
+    @PutMapping(value = UrlConstants.API_WEBCLIENT_QUESTIONINGS, produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "201", description = "Created", content = @Content(schema = @Schema(implementation = QuestioningWebclientDto.class))),
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = QuestioningWebclientDto.class))),
@@ -105,29 +105,23 @@ public class WebclientController {
 
         log.info("Put questioning for webclients {}", questioningWebclientDto.toString());
         String modelName = questioningWebclientDto.getModelName();
-        String idSu = StringUtils.upperCase(questioningWebclientDto.getSurveyUnit().getIdSu());
+        String idSu = questioningWebclientDto.getSurveyUnit().getIdSu();
         String idPartitioning = StringUtils.upperCase(questioningWebclientDto.getIdPartitioning());
 
 
         Partitioning part = partitioningService.findById(idPartitioning);
 
         HttpStatus httpStatus = HttpStatus.OK;
+
+        QuestioningWebclientDto questioningReturn = new QuestioningWebclientDto();
         SurveyUnit su = convertToEntity(questioningWebclientDto.getSurveyUnit());
-
-        // Create su if not exists or update
-        try {
-            SurveyUnit optSuBase = surveyUnitService.findbyId(idSu);
-            su.setQuestionings(optSuBase.getQuestionings());
-
-        } catch (NotFoundException e) {
-            log.warn("survey unit {} does not exist - Creation of the survey unit",
-                    idSu);
-            su.setQuestionings(new HashSet<>());
-        }
+        su = surveyUnitService.saveSurveyUnitAndAddress(su);
 
         // Create questioning if not exists
-        Questioning questioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(idPartitioning, idSu);
-        if (questioning == null) {
+        Optional<Questioning> optQuestioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(idPartitioning, idSu);
+        Questioning questioning;
+
+        if (optQuestioning.isEmpty()) {
             httpStatus = HttpStatus.CREATED;
             log.info("Create questioning for partitioning={} model={} surveyunit={} ", idPartitioning, modelName,
                     idSu);
@@ -135,24 +129,22 @@ public class WebclientController {
             questioning.setIdPartitioning(idPartitioning);
             questioning.setSurveyUnit(su);
             questioning.setModelName(modelName);
+            questioningService.saveQuestioning(questioning);
             QuestioningEvent questioningEvent = new QuestioningEvent();
             questioningEvent.setType(TypeQuestioningEvent.INITLA);
             questioningEvent.setDate(new Date());
             questioningEvent.setQuestioning(questioning);
-            questioning.setQuestioningEvents(new HashSet<>(List.of(questioningEvent)));
-            questioning.setQuestioningAccreditations(new HashSet<>());
+            questioningEventService.saveQuestioningEvent(questioningEvent);
+
+        } else {
+            questioning = optQuestioning.get();
         }
+
 
         for (ContactAccreditationDto contactAccreditationDto : questioningWebclientDto.getContacts()) {
             createContactAndAccreditations(idSu, part, questioning, contactAccreditationDto);
         }
 
-        // save questioning and su
-        questioningService.saveQuestioning(questioning);
-        su.getQuestionings().add(questioning);
-        surveyUnitService.saveSurveyUnitAddressComments(su);
-
-        QuestioningWebclientDto questioningReturn = new QuestioningWebclientDto();
         questioningReturn.setIdPartitioning(idPartitioning);
         questioningReturn.setModelName(modelName);
         questioningReturn.setSurveyUnit(convertToDto(questioning.getSurveyUnit()));
@@ -177,6 +169,7 @@ public class WebclientController {
         Contact contact;
         try {
             contact = convertToEntity(contactAccreditationDto);
+            contactService.findByIdentifier(contactAccreditationDto.getIdentifier());
             if (contactAccreditationDto.getAddress() != null)
                 contact.setAddress(addressService.convertToEntity(contactAccreditationDto.getAddress()));
             contactService.updateContactAddressEvent(contact, node);
@@ -185,20 +178,20 @@ public class WebclientController {
             contact = convertToEntityNewContact(contactAccreditationDto);
             if (contactAccreditationDto.getAddress() != null)
                 contact.setAddress(addressService.convertToEntity(contactAccreditationDto.getAddress()));
-            contactService.createContactAddressEvent(contact, node);
+            contactService.createAddressAndEvent(contact, node);
         }
 
         // Create accreditations if not exists
 
         Set<QuestioningAccreditation> setExistingAccreditations = (questioning
-                .getQuestioningAccreditations() != null) ? questioning.getQuestioningAccreditations()
+                                                                           .getQuestioningAccreditations() != null) ? questioning.getQuestioningAccreditations()
                 : new HashSet<>();
 
 
         List<QuestioningAccreditation> listContactAccreditations = setExistingAccreditations.stream()
                 .filter(acc -> acc.getIdContact().equals(contactAccreditationDto.getIdentifier())
-                        && acc.getQuestioning().getIdPartitioning().equals(part.getId())
-                        && acc.getQuestioning().getSurveyUnit().getIdSu().equals(idSu))
+                               && acc.getQuestioning().getIdPartitioning().equals(part.getId())
+                               && acc.getQuestioning().getSurveyUnit().getIdSu().equals(idSu))
                 .toList();
 
         if (listContactAccreditations.isEmpty()) {
@@ -207,23 +200,26 @@ public class WebclientController {
             questioningAccreditation.setIdContact(contactAccreditationDto.getIdentifier());
             questioningAccreditation.setMain(contactAccreditationDto.isMain());
             questioningAccreditation.setQuestioning(questioning);
+            questioningAccreditationService.saveQuestioningAccreditation(questioningAccreditation);
             setExistingAccreditations.add(questioningAccreditation);
-
+            questioning.setQuestioningAccreditations(setExistingAccreditations);
 
             // create view
             viewService.createView(contactAccreditationDto.getIdentifier(), questioning.getSurveyUnit().getIdSu(),
                     part.getCampaign().getId());
 
-            questioning.getQuestioningAccreditations().add(questioningAccreditation);
         } else {
             // update accreditation
-            QuestioningAccreditation questioningAccreditation = listContactAccreditations.get(0);
+            QuestioningAccreditation questioningAccreditation = listContactAccreditations.getFirst();
             questioningAccreditation.setMain(contactAccreditationDto.isMain());
+            questioningAccreditationService.saveQuestioningAccreditation(questioningAccreditation);
+
         }
+
     }
 
     @Operation(summary = "Get questioning for webclients")
-    @GetMapping(value = Constants.API_WEBCLIENT_QUESTIONINGS, produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping(value = UrlConstants.API_WEBCLIENT_QUESTIONINGS, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = QuestioningWebclientDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -236,17 +232,17 @@ public class WebclientController {
 
         HttpStatus httpStatus = HttpStatus.OK;
 
-        Questioning questioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(idPartitioning,
+        Optional<Questioning> questioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(idPartitioning,
                 idSurveyUnit);
-        if (questioning == null) {
+        if (questioning.isEmpty()) {
             throw new NotFoundException(QUESTIONING_DOES_NOT_EXIST);
         }
 
         questioningWebclientDto.setIdPartitioning(idPartitioning);
         questioningWebclientDto.setModelName(modelName);
-        questioningWebclientDto.setSurveyUnit(convertToDto(questioning.getSurveyUnit()));
+        questioningWebclientDto.setSurveyUnit(convertToDto(questioning.get().getSurveyUnit()));
         List<ContactAccreditationDto> listContactAccreditationDto = new ArrayList<>();
-        questioning.getQuestioningAccreditations().stream()
+        questioning.get().getQuestioningAccreditations()
                 .forEach(acc -> listContactAccreditationDto
                         .add(convertToDto(contactService.findByIdentifier(acc.getIdContact()), acc.isMain())));
         questioningWebclientDto.setContacts(listContactAccreditationDto);
@@ -255,7 +251,7 @@ public class WebclientController {
     }
 
     @Operation(summary = "Search for a partitioning and metadata by partitioning id")
-    @GetMapping(value = Constants.API_WEBCLIENT_METADATA_ID, produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping(value = UrlConstants.API_WEBCLIENT_METADATA_ID, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = MetadataDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -276,7 +272,7 @@ public class WebclientController {
     }
 
     @Operation(summary = "Insert or update a partitiong and metadata by partitioning id")
-    @PutMapping(value = Constants.API_WEBCLIENT_METADATA_ID, produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
+    @PutMapping(value = UrlConstants.API_WEBCLIENT_METADATA_ID, produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = MetadataDto.class))),
             @ApiResponse(responseCode = "201", description = "Created", content = @Content(schema = @Schema(implementation = MetadataDto.class))),
@@ -305,26 +301,8 @@ public class WebclientController {
         campaign.setSurvey(survey);
         Partitioning partitioning = convertToEntity(metadataDto.getPartitioningDto());
         partitioning.setCampaign(campaign);
-
-        campaign = campaignService.addPartitionigToCampaign(campaign, partitioning);
-        survey = surveyService.addCampaignToSurvey(survey, campaign);
-        source = sourceService.addSurveyToSource(source, survey);
-        owner = ownerService.insertOrUpdateOwner(owner);
-        support = supportService.insertOrUpdateSupport(support);
-        source = sourceService.insertOrUpdateSource(source);
-
         source.setOwner(owner);
         source.setSupport(support);
-
-        Set<Source> sourcesOwner = (owner.getSources() == null) ? new HashSet<>()
-                : owner.getSources();
-        sourcesOwner.add(source);
-        owner.setSources(sourcesOwner);
-
-        Set<Source> sourcesSupport = (support.getSources() == null) ? new HashSet<>()
-                : support.getSources();
-        sourcesSupport.add(source);
-        support.setSources(sourcesSupport);
 
         owner = ownerService.insertOrUpdateOwner(owner);
         support = supportService.insertOrUpdateSupport(support);
@@ -361,7 +339,7 @@ public class WebclientController {
     }
 
     @Operation(summary = "Search for main contact")
-    @GetMapping(value = Constants.API_MAIN_CONTACT, produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping(value = UrlConstants.API_MAIN_CONTACT, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK"),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -373,11 +351,11 @@ public class WebclientController {
 
         try {
 
-            Questioning questioning = questioningService
+            Optional<Questioning> optQuestioning = questioningService
                     .findByIdPartitioningAndSurveyUnitIdSu(partitioningId,
                             surveyUnitId);
-            if (questioning != null) {
-                List<QuestioningAccreditation> questioningAccreditations = questioning.getQuestioningAccreditations().stream()
+            if (optQuestioning.isPresent()) {
+                List<QuestioningAccreditation> questioningAccreditations = optQuestioning.get().getQuestioningAccreditations().stream()
                         .filter(QuestioningAccreditation::isMain).toList();
                 if (CollectionUtils.isNotEmpty(questioningAccreditations)) {
                     Contact c = contactService.findByIdentifier(questioningAccreditations.getFirst().getIdContact());
@@ -392,7 +370,7 @@ public class WebclientController {
     }
 
     @Operation(summary = "Get state of the last questioningEvent")
-    @GetMapping(value = Constants.API_WEBCLIENT_STATE, produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping(value = UrlConstants.API_WEBCLIENT_STATE, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = StateDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -401,20 +379,20 @@ public class WebclientController {
     public ResponseEntity<StateDto> getState(@PathVariable("idPartitioning") String idPartitioning,
                                              @PathVariable("idSu") String idSu) {
 
-        Questioning questioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(
+        Optional<Questioning> optQuestioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(
                 idPartitioning, idSu);
-        if (questioning == null) {
+        if (optQuestioning.isEmpty()) {
             throw new NotFoundException(QUESTIONING_DOES_NOT_EXIST);
         }
-        Optional<QuestioningEvent> questioningEvent = questioningEventService.getLastQuestioningEvent(questioning,
+        Optional<QuestioningEvent> questioningEvent = questioningEventService.getLastQuestioningEvent(optQuestioning.get(),
                 TypeQuestioningEvent.STATE_EVENTS);
         StateDto result = new StateDto();
-        result.setState(questioningEvent.isPresent() ? questioningEvent.get().getType().name() : "null");
+        result.setState(questioningEvent.map(event -> event.getType().name()).orElse("null"));
         return ResponseEntity.status(HttpStatus.OK).body(result);
     }
 
     @Operation(summary = "Indicates whether a questioning should be follow up or not")
-    @GetMapping(value = Constants.API_WEBCLIENT_FOLLOWUP, produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping(value = UrlConstants.API_WEBCLIENT_FOLLOWUP, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = EligibleDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -424,13 +402,13 @@ public class WebclientController {
             @PathVariable("idPartitioning") String idPartitioning,
             @PathVariable("idSu") String idSu) {
 
-        Questioning questioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(
+        Optional<Questioning> optQuestioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(
                 idPartitioning, idSu);
-        if (questioning == null) {
+        if (optQuestioning.isEmpty()) {
             throw new NotFoundException(QUESTIONING_DOES_NOT_EXIST);
         }
 
-        Optional<QuestioningEvent> questioningEvent = questioningEventService.getLastQuestioningEvent(questioning,
+        Optional<QuestioningEvent> questioningEvent = questioningEventService.getLastQuestioningEvent(optQuestioning.get(),
                 TypeQuestioningEvent.FOLLOWUP_EVENTS);
 
         EligibleDto result = new EligibleDto();
@@ -439,7 +417,7 @@ public class WebclientController {
     }
 
     @Operation(summary = "Add a FOLLWUP state to a questioning")
-    @PostMapping(value = Constants.API_WEBCLIENT_FOLLOWUP, produces = MediaType.APPLICATION_JSON_VALUE)
+    @PostMapping(value = UrlConstants.API_WEBCLIENT_FOLLOWUP, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = StateDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -450,12 +428,12 @@ public class WebclientController {
             @PathVariable("idPartitioning") String idPartitioning,
             @PathVariable("idSu") String idSu) throws JsonProcessingException {
 
-        Questioning questioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(
+        Optional<Questioning> optQuestioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(
                 idPartitioning, idSu);
-        if (questioning == null) {
+        if (optQuestioning.isEmpty()) {
             throw new NotFoundException(QUESTIONING_DOES_NOT_EXIST);
         }
-
+        Questioning questioning = optQuestioning.get();
         JsonNode node = addWebclientAuthorNode();
         QuestioningEvent questioningEvent = new QuestioningEvent();
         questioningEvent.setQuestioning(questioning);
@@ -479,7 +457,7 @@ public class WebclientController {
     }
 
     @Operation(summary = "Indicates whether a questioning should be extract or not (VALINT and PARTIELINT)")
-    @GetMapping(value = Constants.API_WEBCLIENT_EXTRACT, produces = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping(value = UrlConstants.API_WEBCLIENT_EXTRACT, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = EligibleDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -488,18 +466,19 @@ public class WebclientController {
     public ResponseEntity<EligibleDto> isToExtract(@PathVariable("idPartitioning") String idPartitioning,
                                                    @PathVariable("idSu") String idSu) {
 
-        Questioning questioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(
+        Optional<Questioning> optQuestioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(
                 idPartitioning, idSu);
-        if (questioning == null) {
+        if (optQuestioning.isEmpty()) {
             throw new NotFoundException(QUESTIONING_DOES_NOT_EXIST);
         }
 
-        Optional<QuestioningEvent> questioningEvent = questioningEventService.getLastQuestioningEvent(questioning,
+        Optional<QuestioningEvent> questioningEvent = questioningEventService.getLastQuestioningEvent(optQuestioning.get(),
                 TypeQuestioningEvent.EXTRACT_EVENTS);
         EligibleDto result = new EligibleDto();
         result.setEligible(questioningEvent.isPresent() ? "true" : "false");
         return ResponseEntity.status(HttpStatus.OK).body(result);
     }
+
     private Support convertToEntity(SupportDto supportDto) {
         return modelMapper.map(supportDto, Support.class);
     }
@@ -554,7 +533,7 @@ public class WebclientController {
     }
 
     private SupportDto convertToDto(Support support) {
-        if(support == null) {
+        if (support == null) {
             return null;
         }
         return modelMapper.map(support, SupportDto.class);
@@ -571,7 +550,7 @@ public class WebclientController {
     }
 
     private OwnerDto convertToDto(Owner owner) {
-        if(owner == null) {
+        if (owner == null) {
             return null;
         }
         return modelMapper.map(owner, OwnerDto.class);
