@@ -3,12 +3,12 @@ package fr.insee.survey.datacollectionmanagement.metadata.controller;
 
 import fr.insee.survey.datacollectionmanagement.configuration.AuthenticationUserProvider;
 import fr.insee.survey.datacollectionmanagement.constants.AuthorityRoleEnum;
-import fr.insee.survey.datacollectionmanagement.constants.Constants;
+import fr.insee.survey.datacollectionmanagement.constants.UrlConstants;
 import fr.insee.survey.datacollectionmanagement.metadata.domain.Campaign;
 import fr.insee.survey.datacollectionmanagement.metadata.domain.Partitioning;
+import fr.insee.survey.datacollectionmanagement.metadata.enums.DataCollectionEnum;
 import fr.insee.survey.datacollectionmanagement.metadata.enums.PeriodEnum;
 import fr.insee.survey.datacollectionmanagement.metadata.service.CampaignService;
-import fr.insee.survey.datacollectionmanagement.util.JsonUtil;
 import net.minidev.json.JSONObject;
 import org.assertj.core.util.DateUtil;
 import org.junit.jupiter.api.BeforeEach;
@@ -32,13 +32,9 @@ import java.util.Set;
 
 import static org.hamcrest.Matchers.hasSize;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @AutoConfigureMockMvc
 @SpringBootTest
@@ -60,152 +56,191 @@ class CampaignControllerTest {
 
     @Test
     void getCampaignNotFound() throws Exception {
-        String identifier = "CAMPAIGNNOTFOUND";
-        this.mockMvc.perform(get(Constants.API_CAMPAIGNS_ID, identifier)).andDo(print())
+        String campaignId = "CAMPAIGNNOTFOUND";
+        this.mockMvc.perform(get(UrlConstants.API_CAMPAIGNS_ID, campaignId)).andDo(print())
                 .andExpect(status().is(HttpStatus.NOT_FOUND.value()));
     }
 
 
     @Test
     void putCampaignsErrorId() throws Exception {
-        String identifier = "SOURCE12023T01";
-        String otherIdentifier = "WRONG";
-        Campaign campaign = initOpenedCampaign(identifier);
-        String jsonCampaign = createJson(campaign, "SOURCE12023");
-        String jsonError = JsonUtil.createJsonErrorBadRequest("id and idCampaign don't match");
-        mockMvc.perform(put(Constants.API_CAMPAIGNS_ID, otherIdentifier).content(jsonCampaign)
+        String campaignId = "SOURCE12023T01";
+        String othercampaignId = "WRONG";
+        String surveyId = "SOURCE12023";
+        Campaign campaign = initOpenedCampaign(campaignId);
+        String jsonCampaign = createJson(campaign, surveyId);
+        mockMvc.perform(put(UrlConstants.API_CAMPAIGNS_ID, othercampaignId).content(jsonCampaign)
                         .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isBadRequest()).andExpect(content().json(jsonError, false));
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.message").value("id and idCampaign don't match"));
     }
 
     @Test
-    void isCampaignOnGoing() throws Exception {
-        String identifier = "OPENED";
-        Campaign campaign = initOpenedCampaign(identifier);
-        initCampaignAndPartitionings(identifier, campaign);
+    void putCampaignsErrorDataCollectionTarget() throws Exception {
+        String campaignId = "SOURCE12023T1";
+        String surveyId = "SOURCE12023";
 
-        this.mockMvc.perform(get(Constants.CAMPAIGNS_ID_ONGOING, identifier)).andDo(print()).andExpect(status().isOk())
-                .andExpect(content().json("""
-                        {"ongoing": true}
-                        """, false));
+        Campaign campaign = initOpenedCampaign(campaignId);
+        String jsonCampaign = createJson(campaign, surveyId, false, "WRONG_TARGET");
+        mockMvc.perform(put(UrlConstants.API_CAMPAIGNS_ID, campaignId).content(jsonCampaign)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.message").value("DataCollectionTarget missing or not recognized. Only LUNATIC_NORMAL, LUNATIC_SENSITIVE, XFORM1, XFORM2 are valid"));
+    }
+
+    @Test
+    void putCampaignsLunaticNormalOk() throws Exception {
+        String campaignId = "SOURCE12023X00";
+        String surveyId = "SOURCE12023";
+        Campaign campaign = initOpenedCampaign(campaignId);
+        String jsonCampaign = createJson(campaign, surveyId, false, DataCollectionEnum.LUNATIC_NORMAL.name());
+        mockMvc.perform(put(UrlConstants.API_CAMPAIGNS_ID, campaignId).content(jsonCampaign)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isCreated());
+    }
+
+    @Test
+    void putCampaignsLunaticSensitivityOk() throws Exception {
+        String campaignId = "SOURCE12023X01";
+        String surveyId = "SOURCE12023";
+        Campaign campaign = initOpenedCampaign(campaignId);
+        String jsonCampaign = createJson(campaign, surveyId, true, DataCollectionEnum.LUNATIC_SENSITIVE.name());
+        mockMvc.perform(put(UrlConstants.API_CAMPAIGNS_ID, campaignId).content(jsonCampaign)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isCreated());
+    }
+
+
+    @Test
+    void isCampaignOnGoing() throws Exception {
+        String campaignId = "OPENED";
+        Campaign campaign = initOpenedCampaign(campaignId);
+        initCampaignAndPartitionings(campaignId, campaign);
+
+        this.mockMvc.perform(get(UrlConstants.CAMPAIGNS_ID_ONGOING, campaignId)).andDo(print()).andExpect(status().isOk())
+                .andExpect(jsonPath("$.ongoing").value(true));
+
     }
 
     @Test
     void isCampaignOnGoingClose() throws Exception {
-        String identifier = "CLOSED";
-        Campaign campaign = initClosedCampaign(identifier);
-        initCampaignAndPartitionings(identifier, campaign);
+        String campaignId = "CLOSED";
+        Campaign campaign = initClosedCampaign(campaignId);
+        initCampaignAndPartitionings(campaignId, campaign);
 
-        this.mockMvc.perform(get(Constants.CAMPAIGNS_ID_ONGOING, identifier)).andDo(print()).andExpect(status().isOk())
-                .andExpect(content().json("""
-                        {"ongoing": false}
-                        """, false));
+        this.mockMvc.perform(get(UrlConstants.CAMPAIGNS_ID_ONGOING, campaignId)).andDo(print()).andExpect(status().isOk())
+                .andExpect(jsonPath("$.ongoing").value(false));
+
 
     }
 
     @Test
     void isCampaignOnGoingFutureCampaignFalse() throws Exception {
-        String identifier = "FUTURE";
-        Campaign campaign = initFutureCampaign(identifier);
-        initCampaignAndPartitionings(identifier, campaign);
+        String campaignId = "FUTURE";
+        Campaign campaign = initFutureCampaign(campaignId);
+        initCampaignAndPartitionings(campaignId, campaign);
 
-        this.mockMvc.perform(get(Constants.CAMPAIGNS_ID_ONGOING, identifier)).andDo(print()).andExpect(status().isOk())
-                .andExpect(content().json("""
-                        {"ongoing": false}
-                        """, false));
+        this.mockMvc.perform(get(UrlConstants.CAMPAIGNS_ID_ONGOING, campaignId)).andDo(print()).andExpect(status().isOk())
+                .andExpect(jsonPath("$.ongoing").value(false));
     }
 
     @Test
     void isCampaignOnGoingEmptyCampaignFalse() throws Exception {
-        String identifier = "EMPTY";
-        Campaign campaign = initEmptyCampaign(identifier);
-        String jsonCampaign = createJson(campaign, "SOURCE12023");
+        String campaignId = "EMPTY";
+        String surveyId = "SOURCE12023";
+        Campaign campaign = initEmptyCampaign(campaignId);
+        String jsonCampaign = createJson(campaign, surveyId);
 
         mockMvc.perform(
-                        put(Constants.API_CAMPAIGNS_ID, identifier).content(jsonCampaign)
+                        put(UrlConstants.API_CAMPAIGNS_ID, campaignId).content(jsonCampaign)
                                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isCreated())
-                .andExpect(content().json(jsonCampaign.toString(), false));
+                .andExpect(jsonPath("$.campaignWording").value(campaign.getCampaignWording()))
+                .andExpect(jsonPath("$.surveyId").value(surveyId))
+                .andExpect(jsonPath("$.year").value(campaign.getYear()));
 
-        this.mockMvc.perform(get(Constants.CAMPAIGNS_ID_ONGOING, identifier)).andDo(print()).andExpect(status().isOk())
-                .andExpect(content().json("""
-                        {"ongoing": false}
-                        """, false));
+        this.mockMvc.perform(get(UrlConstants.CAMPAIGNS_ID_ONGOING, campaignId)).andDo(print()).andExpect(status().isOk())
+                .andExpect(jsonPath("$.ongoing").value(false));
+
     }
 
     @Test
     void deleteCampaign() throws Exception {
-        String identifier = "CLOSED";
-        Campaign campaign = initClosedCampaign(identifier);
-        initCampaignAndPartitionings(identifier, campaign);
+        String campaignId = "CLOSED";
+        Campaign campaign = initClosedCampaign(campaignId);
+        initCampaignAndPartitionings(campaignId, campaign);
 
-        this.mockMvc.perform(delete(Constants.API_CAMPAIGNS_ID, identifier)).andDo(print())
+        this.mockMvc.perform(delete(UrlConstants.API_CAMPAIGNS_ID, campaignId)).andDo(print())
                 .andExpect(status().isOk());
     }
 
     @Test
     void getCampaigns() throws Exception {
-        String identifier = "OPENED";
+        String campaignId = "OPENED";
 
-        this.mockMvc.perform(get(Constants.API_CAMPAIGNS, identifier)).andDo(print())
+        this.mockMvc.perform(get(UrlConstants.API_CAMPAIGNS, campaignId)).andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.content", hasSize(16)));
     }
 
-    private void initCampaignAndPartitionings(String identifier, Campaign campaign) throws Exception {
-        String jsonCampaign = createJson(campaign, "SOURCE12023");
+    private void initCampaignAndPartitionings(String campaignId, Campaign campaign) throws Exception {
+        String surveyId = "SOURCE12023";
+        String jsonCampaign = createJson(campaign, surveyId);
 
         mockMvc.perform(
-                        put(Constants.API_CAMPAIGNS_ID, identifier).content(jsonCampaign)
+                        put(UrlConstants.API_CAMPAIGNS_ID, campaignId).content(jsonCampaign)
                                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isCreated())
-                .andExpect(content().json(jsonCampaign, false));
+                .andExpect(jsonPath("$.campaignWording").value(campaign.getCampaignWording()))
+                .andExpect(jsonPath("$.surveyId").value(surveyId))
+                .andExpect(jsonPath("$.year").value(campaign.getYear()));
+
 
         List<Partitioning> partitions = campaign.getPartitionings().stream().toList();
-        Partitioning part1 = partitions.get(0);
+        Partitioning part1 = partitions.getFirst();
         String jsonPart1 = createJsonPart(part1);
 
         mockMvc.perform(
-                        put(Constants.API_PARTITIONINGS_ID, part1.getId()).content(jsonPart1)
+                        put(UrlConstants.API_PARTITIONINGS_ID, part1.getId()).content(jsonPart1)
                                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isCreated());
         Partitioning part2 = partitions.get(1);
         String jsonPart2 = createJsonPart(part2);
 
         mockMvc.perform(
-                        put(Constants.API_PARTITIONINGS_ID, part2.getId()).content(jsonPart2)
+                        put(UrlConstants.API_PARTITIONINGS_ID, part2.getId()).content(jsonPart2)
                                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isCreated());
     }
 
-    private Campaign initOpenedCampaign(String identifier) {
-        return initCampaign(identifier, DateUtil.parse("2000-01-01"), DateUtil.parse("2050-01-01"));
+    private Campaign initOpenedCampaign(String campaignId) {
+        return initCampaign(campaignId, DateUtil.parse("2000-01-01"), DateUtil.parse("2050-01-01"));
     }
 
-    private Campaign initClosedCampaign(String identifier) {
-        return initCampaign(identifier, DateUtil.parse("2010-01-01"), DateUtil.parse("2010-01-31"));
+    private Campaign initClosedCampaign(String campaignId) {
+        return initCampaign(campaignId, DateUtil.parse("2010-01-01"), DateUtil.parse("2010-01-31"));
     }
 
-    private Campaign initFutureCampaign(String identifier) {
-        return initCampaign(identifier, DateUtil.parse("2050-01-01"), DateUtil.parse("2050-01-31"));
+    private Campaign initFutureCampaign(String campaignId) {
+        return initCampaign(campaignId, DateUtil.parse("2050-01-01"), DateUtil.parse("2050-01-31"));
     }
 
-    private Campaign initEmptyCampaign(String identifier) {
-        Campaign empty = initCampaign(identifier, DateUtil.parse("2050-01-01"), DateUtil.parse("2050-01-31"));
+    private Campaign initEmptyCampaign(String campaignId) {
+        Campaign empty = initCampaign(campaignId, DateUtil.parse("2050-01-01"), DateUtil.parse("2050-01-31"));
         empty.setPartitionings(new HashSet<>());
         return empty;
     }
 
-    private Campaign initCampaign(String identifier, Date openingDate, Date closingDate) {
+    private Campaign initCampaign(String campaignId, Date openingDate, Date closingDate) {
         Campaign campaignMock = new Campaign();
         campaignMock.setYear(2023);
         campaignMock.setPeriod(PeriodEnum.A00);
-        campaignMock.setId(identifier);
+        campaignMock.setId(campaignId);
         campaignMock.setPartitionings(Set.of(
-                initPartitioning(identifier, "01", openingDate, closingDate, campaignMock),
-                initPartitioning(identifier, "012", openingDate, closingDate, campaignMock)
+                initPartitioning(campaignId, "01", openingDate, closingDate, campaignMock),
+                initPartitioning(campaignId, "012", openingDate, closingDate, campaignMock)
         ));
-        campaignMock.setCampaignWording("Short wording about " + identifier);
+        campaignMock.setCampaignWording("Short wording about " + campaignId);
         return campaignMock;
     }
 
@@ -239,16 +274,30 @@ class CampaignControllerTest {
         return jo.toString();
     }
 
+    private String createJson(Campaign campaign, String idSurvey, boolean sensitivity, String dataCollectionTarget) {
+        JSONObject jo = new JSONObject();
+        jo.put("id", campaign.getId());
+        jo.put("year", campaign.getYear());
+        jo.put("surveyId", idSurvey);
+        jo.put("campaignWording", campaign.getCampaignWording());
+        jo.put("period", campaign.getPeriod().toString());
+        jo.put("sensitivity", sensitivity);
+        jo.put("dataCollectionTarget", dataCollectionTarget);
+        return jo.toString();
+    }
+
+
     @Test
     @Transactional
     @Rollback
     void getCampaignOk() throws Exception {
-        String identifier = "SOURCE12023T01";
+        String campaignId = "SOURCE12023T01";
 
-        assertDoesNotThrow(() -> campaignService.findById(identifier));
-        Campaign campaign = campaignService.findById(identifier);
-        String json = createJson(campaign, "SOURCE12023");
-        this.mockMvc.perform(get(Constants.API_CAMPAIGNS_ID, identifier)).andDo(print()).andExpect(status().isOk())
-                .andExpect(content().json(json, false));
+        assertDoesNotThrow(() -> campaignService.findById(campaignId));
+        Campaign campaign = campaignService.findById(campaignId);
+        this.mockMvc.perform(get(UrlConstants.API_CAMPAIGNS_ID, campaignId)).andDo(print()).andExpect(status().isOk())
+                .andExpect(jsonPath("$.campaignWording").value(campaign.getCampaignWording()))
+                .andExpect(jsonPath("$.surveyId").value(campaign.getSurvey().getId()))
+                .andExpect(jsonPath("$.year").value(campaign.getYear()));
     }
 }
